Куча всяких фиксов